Fix missing colour var

--- a/static/src/stylesheets/module/onward-garnett/_feedback.scss
+++ b/static/src/stylesheets/module/onward-garnett/_feedback.scss
@@ -49,7 +49,7 @@
 }
 
 .feedback__alertbox {
-    background-color: $news-garnett-main-1;
+    background-color: $news-main;
     color: #ffffff;
     font-size: 1.2em;
     padding: .5em;
